--- a/ini/avr.ini
+++ b/ini/avr.ini
@@ -96,7 +96,7 @@ board    = sanguino_atmega644p
 [env:sanguino1284p]
 extends                   = common_avr8
 board                     = sanguino_atmega1284p
-board_upload.maximum_size = 126976
+#board_upload.maximum_size = 126976
 
 #
 # Sanguinololu (ATmega1284p stock bootloader with tuned flags)
